--- a/20240202_maruyama_css-test/index.html
+++ b/20240202_maruyama_css-test/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h2 class="company">ＣＯＡＣＨＴＥＣＨ</h2>
+        <h2 class="company">coachtech</h2>
         <nav class="header-nav">
             <ul class="header-nav-list">
                 <li class="header-nav-item">
